src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/invalid/AmountInvalidException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.invalid;

public class AmountInvalidException extends RuntimeException {
    public AmountInvalidException(String message) {
        super(message);
    }
}
